// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DialogTwoButtonFooter tests should render 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  display: inline-block;
  padding: 0 15px;
  color: #393637;
  text-align: center;
  vertical-align: middle;
  font-size: 11px;
  font-weight: bold;
  line-height: 30px;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  background-color: #fff;
  border-radius: 2px;
  border: 1px solid #aaaaaa;
  cursor: pointer;
  overflow: visible;
  z-index: 1;
}

.c2:focus,
.c2:hover {
  border: 1px solid #393637;
}

.c2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #66c430;
  font-weight: bold;
  color: #fff;
}

.c2[disabled] {
  cursor: not-allowed;
  opacity: 0.65;
  box-shadow: none;
}

.c2 img {
  height: 32px;
  width: 32px;
  margin-top: 5px 10px 5px -10px;
  vertical-align: middle;
}

.c2:link {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #393637;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  border: 1px solid #787878;
  color: #519032;
  background: #87d050;
}

.c4:hover {
  color: #fff;
  background: #519032;
}

.c1 {
  border-width: 1px 0 0 0;
  border-style: solid;
  border-color: #c8d3d9;
  margin-top: 15px;
  padding: 10px 20px 10px 20px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

<div
  class="c0 c1"
>
  <button
    class="c2 c3 c4"
    data-testid="dialog-close-button"
    title="Cancel"
  >
    Cancel
  </button>
  <button
    class="c2 c3 c4"
    data-testid="dialog-save-button"
    title="Foo"
  >
    Foo
  </button>
</div>
`;

exports[`DialogTwoButtonFooter tests should render loading and disable cancel button 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  display: inline-block;
  padding: 0 15px;
  color: #393637;
  text-align: center;
  vertical-align: middle;
  font-size: 11px;
  font-weight: bold;
  line-height: 30px;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  background-color: #fff;
  border-radius: 2px;
  border: 1px solid #aaaaaa;
  cursor: pointer;
  overflow: visible;
  z-index: 1;
}

.c2:focus,
.c2:hover {
  border: 1px solid #393637;
}

.c2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #66c430;
  font-weight: bold;
  color: #fff;
}

.c2[disabled] {
  cursor: not-allowed;
  opacity: 0.65;
  box-shadow: none;
}

.c2 img {
  height: 32px;
  width: 32px;
  margin-top: 5px 10px 5px -10px;
  vertical-align: middle;
}

.c2:link {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #393637;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  border: 1px solid #787878;
  color: #519032;
  background: #87d050;
}

.c4:hover {
  color: #fff;
  background: #519032;
}

.c5 {
  border: 1px solid #787878;
  color: rgba(0,0,0,0.0);
  background: #87d050 url(/img/loading.gif) center center no-repeat;
}

.c5:hover {
  color: rgba(0,0,0,0.0);
  background: #66c430 url(/img/loading.gif) center center no-repeat;
}

.c1 {
  border-width: 1px 0 0 0;
  border-style: solid;
  border-color: #c8d3d9;
  margin-top: 15px;
  padding: 10px 20px 10px 20px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

<div
  class="c0 c1"
>
  <button
    class="c2 c3 c4"
    data-testid="dialog-close-button"
    disabled=""
    title="Cancel"
  >
    Cancel
  </button>
  <button
    class="c2 c3 c5"
    data-testid="dialog-save-button"
    title="Foo"
  >
    Foo
  </button>
</div>
`;
